--- a/Av3LabBD/WebContent/index.xhtml
+++ b/Av3LabBD/WebContent/index.xhtml
@@ -14,9 +14,30 @@
 <h:body>
 
 	<div id="principal">
-	
-	
-	
+	<h:form>
+	<h:commandButton actionListener="#{databaseMB.listaBD()}" value="carregar" />
+		<p:dataTable var="db" rendered="#{databaseMB.lista.size() > 0}" value="#{databaseMB.lista}">
+				<f:facet name="header">
+					DataBase
+				</f:facet>
+				<p:column headerText="ID">
+					<h:outputText value="#{db.id}"/>
+				</p:column>
+				<p:column headerText="Nome">
+					<h:outputText value="#{db.nome}"/>
+				</p:column>
+				<p:column headerText="Data de criação">
+					<h:outputText value="#{db.data}"/>
+				</p:column>
+				<p:column headerText="Hora de criação">
+					<h:outputText value="#{db.hora}"/>
+				</p:column>
+				<!--<p:column>
+					  <h:commandLink action="#{carrinhoMB.excluir( carrinho )}">remover</h:commandLink>
+					<f:facet name="header">Ações</f:facet>
+				</p:column>-->
+		</p:dataTable>
+	</h:form>
 	</div>
 
 </h:body>
