--- a/Av3LabBD/WebContent/index.xhtml
+++ b/Av3LabBD/WebContent/index.xhtml
@@ -32,6 +32,13 @@
 				<p:column headerText="Hora de criação">
 					<h:outputText value="#{db.hora}"/>
 				</p:column>
+				<p:columns headerText="but">
+					<p:commandButton value="baixar"
+						style="font-size:70%" id="withIcon"
+						actionListener="#" 
+						icon="ui-icon-plusthick">
+					</p:commandButton>
+				</p:columns>
 				<!--<p:column>
 					  <h:commandLink action="#{carrinhoMB.excluir( carrinho )}">remover</h:commandLink>
 					<f:facet name="header">Ações</f:facet>
