--- a/Av3LabBD/WebContent/index.xhtml
+++ b/Av3LabBD/WebContent/index.xhtml
@@ -14,37 +14,36 @@
 <h:body>
 
 	<div id="principal">
-	<h:form>
-	<h:commandButton actionListener="#{databaseMB.listaBD()}" value="carregar" />
-		<p:dataTable var="db" rendered="#{databaseMB.lista.size() > 0}" value="#{databaseMB.lista}">
+		<h:form>
+			<h:commandButton actionListener="#{databaseMB.listaBD()}"
+				value="carregar" />
+			<p:dataTable var="db" rendered="#{databaseMB.lista.size() > 0}"
+				value="#{databaseMB.lista}">
 				<f:facet name="header">
 					DataBase
 				</f:facet>
 				<p:column headerText="ID">
-					<h:outputText value="#{db.id}"/>
+					<h:outputText value="#{db.id}" />
 				</p:column>
 				<p:column headerText="Nome">
-					<h:outputText value="#{db.nome}"/>
+					<h:outputText value="#{db.nome}" />
 				</p:column>
 				<p:column headerText="Data de criação">
-					<h:outputText value="#{db.data}"/>
+					<h:outputText value="#{db.data}" />
 				</p:column>
 				<p:column headerText="Hora de criação">
-					<h:outputText value="#{db.hora}"/>
+					<h:outputText value="#{db.hora}" />
 				</p:column>
 				<p:columns headerText="but">
-					<p:commandButton value="baixar"
-						style="font-size:70%" id="withIcon"
-						actionListener="#" 
-						icon="ui-icon-plusthick">
-					</p:commandButton>
+					
+<h:commandLink action="#">remover</h:commandLink>
 				</p:columns>
 				<!--<p:column>
 					  <h:commandLink action="#{carrinhoMB.excluir( carrinho )}">remover</h:commandLink>
 					<f:facet name="header">Ações</f:facet>
 				</p:column>-->
-		</p:dataTable>
-	</h:form>
+			</p:dataTable>
+		</h:form>
 	</div>
 
 </h:body>
