--- a/Av3LabBD/WebContent/index.xhtml
+++ b/Av3LabBD/WebContent/index.xhtml
@@ -34,14 +34,10 @@
 				<p:column headerText="Hora de criação">
 					<h:outputText value="#{db.hora}" />
 				</p:column>
-				<p:columns headerText="but">
-					
-<h:commandLink action="#">remover</h:commandLink>
-				</p:columns>
-				<!--<p:column>
-					  <h:commandLink action="#{carrinhoMB.excluir( carrinho )}">remover</h:commandLink>
+				<p:column>
+					  <h:commandLink >remover</h:commandLink>
 					<f:facet name="header">Ações</f:facet>
-				</p:column>-->
+				</p:column>
 			</p:dataTable>
 		</h:form>
 	</div>
